# source/dotnet/domain-tests/Clients/Wholesale/V3/swagger.json
@@ -159,203 +159,6 @@
         }
       }
     },
-    "/v3/batches/{batchId}/processes/{gridAreaCode}/time-series-types/{timeSeriesType}/balance-responsible-parties": {
-      "get": {
-        "tags": [
-          "ProcessStepBalanceResponsibleParty"
-        ],
-        "summary": "Balance responsible parties.",
-        "operationId": "GetListOfBalanceResponsibleParties",
-        "parameters": [
-          {
-            "name": "batchId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "gridAreaCode",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "timeSeriesType",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/TimeSeriesType"
-            }
-          },
-          {
-            "name": "api-version",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ActorDto"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/v3/batches/{batchId}/processes/{gridAreaCode}/time-series-types/{timeSeriesType}/energy-suppliers": {
-      "get": {
-        "tags": [
-          "ProcessStepEnergySupplier"
-        ],
-        "summary": "Returns a list of Energy suppliers. If balance responsible party is specified by the balanceResponsibleParty parameter only the energy suppliers associated with that balance responsible party is returned",
-        "operationId": "GetListOfEnergySuppliers",
-        "parameters": [
-          {
-            "name": "batchId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "gridAreaCode",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "timeSeriesType",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/TimeSeriesType"
-            }
-          },
-          {
-            "name": "balanceResponsibleParty",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "api-version",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ActorDto"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/v3/batches/{batchId}/processes/{gridAreaCode}/time-series-types/{timeSeriesType}": {
-      "get": {
-        "tags": [
-          "ProcessStepResult"
-        ],
-        "summary": "Calculation results provided by the following method:\r\nWhen only 'energySupplierGln' is provided, a result is returned for a energy supplier for the requested grid area, for the specified time series type.\r\nif only a 'balanceResponsiblePartyGln' is provided, a result is returned for a balance responsible party for the requested grid area, for the specified time series type.\r\nif both 'balanceResponsiblePartyGln' and 'energySupplierGln' is provided, a result is returned for the balance responsible party's energy supplier for requested grid area, for the specified time series type.\r\nif no 'balanceResponsiblePartyGln' and 'energySupplierGln' is provided, a result is returned for the requested grid area, for the specified time series type.",
-        "operationId": "GetProcessStepResult",
-        "parameters": [
-          {
-            "name": "batchId",
-            "in": "path",
-            "required": true,
-            "description": "The id to identify the batch the request is for",
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "gridAreaCode",
-            "in": "path",
-            "required": true,
-            "description": "The grid area the requested result is in",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "timeSeriesType",
-            "in": "path",
-            "required": true,
-            "description": "The time series type the result has",
-            "schema": {
-              "$ref": "#/components/schemas/TimeSeriesType"
-            }
-          },
-          {
-            "name": "energySupplierGln",
-            "in": "query",
-            "description": "The GLN for the energy supplier the requested result",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "balanceResponsiblePartyGln",
-            "in": "query",
-            "description": "The GLN for the balance responsible party the requested result",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "api-version",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProcessStepResultDto"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/v3/SettlementReport/Download": {
       "get": {
         "tags": [
@@ -517,15 +320,6 @@
   },
   "components": {
     "schemas": {
-      "ActorDto": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "gln": {
-            "type": "string"
-          }
-        }
-      },
       "BatchDto": {
         "type": "object",
         "description": "An immutable batch.",
@@ -618,99 +412,12 @@
           "Failed"
         ]
       },
-      "ProcessStepResultDto": {
-        "type": "object",
-        "description": "Result data from a specific step in a process",
-        "additionalProperties": false,
-        "properties": {
-          "sum": {
-            "type": "number",
-            "description": "Sum has a scale of 3",
-            "format": "double"
-          },
-          "min": {
-            "type": "number",
-            "description": "Min has a scale of 3",
-            "format": "double"
-          },
-          "max": {
-            "type": "number",
-            "description": "Max has a scale of 3",
-            "format": "double"
-          },
-          "periodStart": {
-            "type": "string",
-            "description": "",
-            "format": "date-time"
-          },
-          "periodEnd": {
-            "type": "string",
-            "description": "",
-            "format": "date-time"
-          },
-          "resolution": {
-            "type": "string",
-            "description": ""
-          },
-          "unit": {
-            "type": "string",
-            "description": "kWh"
-          },
-          "timeSeriesPoints": {
-            "type": "array",
-            "description": "",
-            "items": {
-              "$ref": "#/components/schemas/TimeSeriesPointDto"
-            }
-          },
-          "processType": {
-            "$ref": "#/components/schemas/ProcessType"
-          },
-          "timeSeriesType": {
-            "$ref": "#/components/schemas/TimeSeriesType"
-          }
-        }
-      },
       "ProcessType": {
         "type": "string",
         "description": "Defines the wholesale process type",
         "enum": [
           "BalanceFixing",
           "Aggregation"
-        ]
-      },
-      "TimeSeriesPointDto": {
-        "type": "object",
-        "description": "TimeSeriesPoint",
-        "additionalProperties": false,
-        "properties": {
-          "time": {
-            "type": "string",
-            "description": "The observation time for the measured 'Quantity'",
-            "format": "date-time"
-          },
-          "quantity": {
-            "type": "number",
-            "description": "Quantity has a scale of 3",
-            "format": "double"
-          },
-          "quality": {
-            "type": "string",
-            "description": "Any of the values from Energinet.DataHub.Wholesale.WebApi.V3.ProcessStepResult.TimeSeriesPointQuality"
-          }
-        }
-      },
-      "TimeSeriesType": {
-        "type": "string",
-        "enum": [
-          "NonProfiledConsumption",
-          "FlexConsumption",
-          "Production",
-          "NetExchangePerGa",
-          "NetExchangePerNeighboringGa",
-          "GridLoss",
-          "NegativeGridLoss",
-          "PositiveGridLoss"
         ]
       }
     },
