# source/dotnet/wholesale-api/WebApi/V3/Calculation/CalculationDto.cs
@@ -12,12 +12,22 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Energinet.DataHub.Wholesale.WebApi.V3.Batch;
+namespace Energinet.DataHub.Wholesale.WebApi.V3.Calculation;
 
-public enum BatchState
-{
-    Pending,
-    Executing,
-    Completed,
-    Failed,
-}
+/// <summary>
+/// An immutable calculation.
+/// </summary>
+public sealed record CalculationDto(
+    long? RunId,
+    Guid CalculationId,
+    DateTimeOffset PeriodStart,
+    DateTimeOffset PeriodEnd,
+    string Resolution,
+    string Unit,
+    DateTimeOffset? ExecutionTimeStart,
+    DateTimeOffset? ExecutionTimeEnd,
+    CalculationState ExecutionState,
+    bool AreSettlementReportsCreated,
+    string[] GridAreaCodes,
+    ProcessType ProcessType,
+    Guid CreatedByUserId);
